fixed eContainer not centered correctly

--- a/static/css/containers.less
+++ b/static/css/containers.less
@@ -91,7 +91,6 @@ body::-webkit-scrollbar-thumb:focus {
 .eContainer{
     width: 90%;
     height: 90%;
-    margin-right: 10px;
 }
 
 .ec-frame{
@@ -106,7 +105,6 @@ body::-webkit-scrollbar-thumb:focus {
     linear-gradient(to bottom, @secondary @corners, transparent @corners) 100% 0,
     linear-gradient(to top, @secondary @corners, transparent @corners) 0 100%,
     linear-gradient(to top, @secondary @corners, transparent @corners) 100% 100%;
-
     background-repeat: no-repeat;
     background-size: 20px 20px;
     padding: 10px;
